@@ -3,10 +3,13 @@ Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
 acct_mgr-0.5 (not yet released) - branch 0.11
  resolved issues
+ * #10681: User with empty password can't reset their password
+ * prevent two ways for a user to bypass a forced password change
 
  new features
  * add unit tests for db access functions
  * add account guard configuration to config admin panel
+ * allow logging-in into password-less accounts via acct_mgr.LoginModule
 
 
 acct_mgr-0.4.2 (27-Dec-2012) - branch 0.11
